# infestation

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  serve.sh
.github/workflows/: deploy.yml
game/: Cargo.toml  build.rs
game/src/: direction.rs  editor_app.rs  game.rs  game_app.rs  grid.rs  input.rs  level_stack.rs  levels.rs  lib.rs  main.rs  position.rs  render.rs  screen_wake.rs  sprites.rs  storage.rs
game/src/game/: animation.rs  cyborg_distance.rs  cyborg_rat.rs  explosion.rs  player.rs  rat.rs  tests.rs  zap.rs
game/src/grid/: parse.rs
js/: quad-gamepad.js  quad-storage.js  quad-touch.js  screen-wake.js
levels/: blackhole.csv  chase.csv  chase.json  explosives2.csv  explosives2.json  guidance.csv  guidance.json  limited.csv  limited2.csv  limited2.json  lock_in.csv  lock_in.json  on_the_clock.csv  on_the_clock.json  order_of_operations.csv  order_of_operations.json  order_of_operations_new.csv  order_of_operations_new.json  order_of_operations_new_v2.csv  order_of_operations_new_v2.json  overstep.csv  planks.json  rats.json  release.csv  release.json  reload.csv  ring_around.csv  ring_around.json  synchronicity.csv  synchronicity.json  tinderbox.csv  tinderbox.json  trapped_rat.json  triggering_explosives_v3.csv  triggering_explosives_v3.json  triggers.json  triggers2.csv  triggers2.json  webs.csv  webs.json  (+2 more)
levels/cyborg_rats/: ai_takeover.csv  ai_takeover.json  cyborg_rats.csv  cyborg_rats.json  fakeout.csv  fakeout.json  stalemate.csv  stalemate.json  unguided.csv  unguided.json
quad-gamepad/: Cargo.toml
quad-touch/: Cargo.toml
(+26 files in other folders)
